--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -62,6 +62,8 @@ jobs:
     
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+        with:
+          install: true
 
       - name: "yest docker platform"
         run: |
