--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -65,18 +65,18 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
-      - name: "yest docker platform"
+      - name: "Test docker platform"
         run: |
           DOCKER_DEFAULT_PLATFORM=linux/arm64 docker run -t ubuntu uname -a
 
-      - name: "Set up Python 3.13"
-        uses: actions/setup-python@v4
+      - name: "Set up Python 3.10"
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.13"
+          python-version: "3.10"
       - name: "Install python dependencies"
         run: |
           python -m pip install --upgrade pip 
-          python -m pip install --upgrade build setuptools wheel  setuptools-scm
+          python -m pip install --upgrade build setuptools wheel setuptools-scm
           pip install -r requirements.txt -r requirements-dev.txt
       - name: "Test with pytest"
         run: |
