--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -59,6 +59,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          install: true
     
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -76,7 +78,6 @@ jobs:
           python -m pip install --upgrade pip 
           python -m pip install --upgrade build setuptools wheel setuptools-scm
           pip install -r requirements.txt -r requirements-dev.txt
-          sudo apt-get install python3.10-distutils
       - name: "Test with pytest"
         run: |
           python -m pytest -s -v ${{ matrix.config.subtest_dir }}
