--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -59,8 +59,6 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          install: true
     
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -80,4 +78,11 @@ jobs:
           pip install -r requirements.txt -r requirements-dev.txt
       - name: "Test with pytest"
         run: |
+          docker() {
+            if [ "$1" = "build" ]; then
+              command docker buildx build --load "${@:2}"
+            else
+              command docker "$@"
+            fi
+          }
           python -m pytest -s -v ${{ matrix.config.subtest_dir }}
