fix: namespace perms
Signed-off-by: Tom Plant <tom@tplant.com.au>

--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -50,6 +50,8 @@ jobs:
 
 
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write # Namespace
     
     steps:
       - uses: actions/checkout@v3
