--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -50,8 +50,8 @@ jobs:
 
 
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write # Namespace
+    # permissions:
+    #   id-token: write # Namespace
     
     steps:
       - uses: actions/checkout@v3
@@ -61,14 +61,19 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          install: true
 
-      - name: Set up Namespace CLI
-        uses: namespacelabs/nscloud-setup@v0
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-      - name: Connect to Namespace Buildx
-        uses: namespacelabs/nscloud-setup-buildx-action@v0
+      - name: "Test docker platform"
+        run: |
+          DOCKER_DEFAULT_PLATFORM=linux/arm64 docker run -t ubuntu uname -a
+
+      # - name: Set up Namespace CLI
+      #   uses: namespacelabs/nscloud-setup@v0
+
+      # - name: Connect to Namespace Buildx
+      #   uses: namespacelabs/nscloud-setup-buildx-action@v0
 
       - name: "Set up Python 3.10"
         uses: actions/setup-python@v5
@@ -82,3 +87,4 @@ jobs:
       - name: "Test with pytest"
         run: |
           python -m pytest -s -v ${{ matrix.config.subtest_dir }}
+          docker image ls
