--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -50,8 +50,6 @@ jobs:
 
 
     runs-on: ubuntu-latest
-    # permissions:
-    #   id-token: write # Namespace
     
     steps:
       - uses: actions/checkout@v3
@@ -69,12 +67,6 @@ jobs:
         run: |
           DOCKER_DEFAULT_PLATFORM=linux/arm64 docker run -t ubuntu uname -a
 
-      # - name: Set up Namespace CLI
-      #   uses: namespacelabs/nscloud-setup@v0
-
-      # - name: Connect to Namespace Buildx
-      #   uses: namespacelabs/nscloud-setup-buildx-action@v0
-
       - name: "Set up Python 3.10"
         uses: actions/setup-python@v5
         with:
@@ -86,5 +78,4 @@ jobs:
           pip install -r requirements.txt -r requirements-dev.txt
       - name: "Test with pytest"
         run: |
-          python -m pytest -s -v ${{ matrix.config.subtest_dir }} || true
-          docker image ls
+          python -m pytest -s -v ${{ matrix.config.subtest_dir }}
